# Markdown-Viewer

./: .gitignore  CLAUDE.md  DIAGRAMS.md  LESSONS_LEARNED.md  README.md  before-build.sh  bundle-core.sh  make-dmg.sh  package-lock.json  package.json  tsconfig.json
.github/workflows/: release.yml
samples/: sample.ipynb  sample.md
scripts/: build-app.mjs
src/: cli.ts  index.ts  pdf.ts  render.ts
src/parse/: markdown.ts  notebook.ts
src/theme/: registry.ts
src/theme/themes/: academic.css  github.css  minimal.css
src/transform/: outputs.ts
tauri-app/: dev-server.mjs  index.html  package-lock.json  package.json  vite.config.ts
tauri-app/src/: main.ts  style.css
tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
tauri-app/src-tauri/.cargo/: config.toml
tauri-app/src-tauri/capabilities/: default.json
tauri-app/src-tauri/icons/: icon.icns
tauri-app/src-tauri/src/: main.rs
test/: markdown.test.ts  notebook.test.ts  pdf.test.ts
