[package]
name = "mdtool-tauri"
version = "1.0.7"
description = "mdTool desktop: render Markdown/Jupyter to themed PDF"
edition = "2021"
rust-version = "1.77"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }

[features]
# Default to no custom protocol; Tauri's asset protocol is enabled by default.
default = []
